# Backend-Dev-Projects

./: requirements.txt
Django/djangocourse/: db.sqlite3  pyproject.toml
Django/djangocourse/app/: admin.py  models.py  urls.py  views.py
Django/djangocourse/app/migrations/: 0001_initial.py  0002_rename_word_column_article_word_count.py
Django/djangocourse/djangocourse/: settings.py  urls.py
Django/djangocourse/templates/app/: home.html
FastAPI/: .gitignore  main.py  rav.yaml  requirements.txt
FastAPI/app/: app.py
MoviesReview/: .env  package-lock.json  package.json
MoviesReview/src/: main.js
MoviesReview/src/config/: db.js
MoviesReview/src/routes/: movieRoutes.js
tanstack-test/: .cta.json  package-lock.json  package.json
tanstack-test/src/: routeTree.gen.ts
tanstack-test/src/api/: getGreetings.tsx  getServerTime.tsx  getUser.tsx
tanstack-test/src/components/: ErrorComponent.tsx  Header.tsx
tanstack-test/src/routes/: __root.tsx  index.tsx  user.$id.tsx  users.tsx
tanstack-test/src/routes/demo/: start.server-funcs.tsx
travfast/: main.py
travfast/app/: schemas.py  storage.py
travfast/app/middlewares/: timer.py
travfast/app/routes/: issues.py
travfast/data/: issues.json
